<resources>
    <string name="app_name">Westen</string>

    <!-- LoginActivity -->
    <string name="txtLogin">Login</string>
    <string name="txtEmailLogin">E-mail</string>
    <string name="inputEmailLogin">Digite seu e-mail</string>
    <string name="txtSenhaLogin">Senha</string>
    <string name="inputSenhaLogin">Digite sua senha</string>
    <string name="txtAreaAtuacao">Empresa de Desenvolvimento de Software</string>
    <string name="txtHistoria">História</string>
    <string name="txtConteudoHistoria">
        A Westen, empresa fundada em novembro de 2018, abrange todo o estado de São Paulo, com sede na capital. 
        Desde então leva a melhor experiência e qualidade em sistemas de gerenciamento.\nA excelência na segurança em nossos serviços, com rápida manutenção, deixa o sistema do cliente com
        mínimas vulnerabilidades a ataques.
    </string>
    <string name="txtVisao">Visão</string>
    <string name="txtConteudoVisao">Liderar, crescer e disseminar a forma e tecnologia de trabalho em todo Sudeste.</string>
    <string name="txtMissao">Missão</string>
    <string name="txtConteudoMissao">Criar o futuro, provendo segurança e privacidade a todos.</string>
    <string name="txtValores">Valores</string>
    <string name="txtConteudoValores">
        Projetar serviços com:\n
        • Respeito\n
        • Inovação\n
        • Qualidade\n
        • Integridade\n
        • Responsabilidade\n
        • Excelência
    </string>
    <string name="txtAplicativo">Aplicativo</string>
    <string name="txtVersaoAplicativo">Versão 1.0</string>
    <string name="txtAdicionar">Adicionar</string>
    <string name="txtNome">Nome</string>
    <string name="txtDescricao">Descrição</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtCNPJ">CNPJ</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtLogradouro">Logradouro</string>
    <string name="txtCEP">CEP</string>
    <string name="txtNumero">Número</string>
    <string name="txtCidade">Cidade</string>
    <string name="txtEstado">UF</string>
    <string name="txtCadastrar">Cadastrar</string>
    <string name="txtLogotipo">Logotipo</string>
    <string name="txtSenha">Senha</string>
    <string name="txtCargo">Cargo</string>
    <string name="txtCPF">CPF</string>
    <string name="txtCliente">Cliente</string>
    <string name="txtDataInicio">Data de Início</string>
    <string name="txtDataFinal">Data Final</string>
    <string name="txtStatus">Status</string>
    <string name="txtMembros">Membros</string>
    <string name="txtServico">Serviço</string>
    <string name="txtFuncionario">Funcionário</string>
    <string name="txtConcluidos">Concluídos</string>
    <string name="txtDesenvolvendo">Desenvolvendo</string>
    <string name="txtEquipes">Equipes</string>
    <string name="txtValorEquipes">00</string>
    <string name="txtValorDesenvolvendo">00</string>
    <string name="txtValorConcluidos">00</string>
    <string name="txtSelecioneMEmbros">Selecione os membros</string>
    <string name="txtCodigo">#</string>
    <string name="txtProjetos">Projetos</string>
    <string name="txtComplemento">Complemento</string>
    <string name="txtBairro">Bairro</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txtUF">UF</string>
    <string name="txtSalvar">Salvar</string>
    <string name="txtFuncionarioEmAndamento">Funcionário não possui projetos em andamento.</string>
    <string name="txtEmAndamento">Em andamento</string>
    <string name="txtNaoIniciado">Não iniciados</string>
    <string name="txtConcluido">Concluídos</string>
    <string name="txtFuncionarioNaoIniciado">Funcionário não possui projetos não iniciados.</string>
    <string name="txtFuncionarioConcluido">Funcionário não possui projetos concluídos.</string>
    <string name="txtLogout">Logout</string>
    <string name="txtLocalizacao">Usar localização atual</string>
    <string-array name="status">
        <item></item>
        <item>Não iniciado</item>
        <item>Em andamento</item>
        <item>Concluido</item>
    </string-array>
    <string-array name="servico">
        <item></item>
        <item>IoT</item>
        <item>Mobile</item>
        <item>Desktop</item>
        <item>Web</item>
    </string-array>
</resources>