<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="270dp"
        android:background="@drawable/view_login"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            style="@style/txtTituloView"
            android:text="@string/txtLogin"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="309dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="100dp">

            <TextView
                style="@style/labelForm_login"
                android:text="@string/txtEmailLogin" />

            <EditText
                android:id="@+id/txtEmailLogin"
                style="@style/input_login"
                android:hint="@string/inputEmailLogin"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/labelForm_login"
                android:text="@string/txtSenhaLogin" />

            <EditText
                android:id="@+id/txtSenhaLogin"
                style="@style/input_login"
                android:hint="@string/inputSenhaLogin"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btnLogin"
                style="@style/button_login"
                android:text="@string/txtLogin" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>