<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".Activities.SobreActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/ic_voltar"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

            <ImageView
                android:layout_width="167dp"
                android:layout_height="153dp"
                app:srcCompat="@drawable/logo"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                style="@style/txtTituloActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAreaAtuacao"/>

        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/txtSubTituloActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHistoria" />

            <TextView
                style="@style/txtConteudoActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConteudoHistoria" />
        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight=".3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/card_sobre"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="1dp"
                android:elevation="1dp">

                <TextView
                    style="@style/txtSubTituloActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtVisao" />

                <TextView
                    style="@style/txtConteudoActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txtConteudoVisao"
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight=".3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/card_sobre"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="1dp"
                android:elevation="1dp">

                <TextView
                    style="@style/txtSubTituloActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMissao" />

                <TextView
                    style="@style/txtConteudoActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txtConteudoMissao"
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight=".33"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/card_sobre"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="1dp"
                android:elevation="1dp">

                <TextView
                    style="@style/txtSubTituloActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtValores" />

                <TextView
                    style="@style/txtConteudoActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtConteudoValores"
                    android:textSize="10sp"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                style="@style/txtTituloActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAplicativo"
                android:paddingBottom="10dp"/>

            <TextView
                style="@style/txtConteudoActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtVersaoAplicativo"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>