<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".Activities.FuncionarioCadastroActivity">

    <include
        android:id="@+id/FuncionarioCadastro_header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/FuncionarioCadastro_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FuncionarioCadastro_header"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/txtFuncionario"
                    style="@style/txtTituloActivity"
                    android:layout_marginBottom="20dp"/>

                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnFuncionarioLocalizacaoAtual"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Usar localização atual"
                    android:background="@drawable/input_preto"
                    android:backgroundTint="@null"
                    android:textColor="@color/black"
                    android:fontFamily="@font/raleway"
                    android:textSize="10sp"/>

            </LinearLayout>

            <TextView
                style="@style/labelForms"
                android:text="@string/txtNome" />

            <EditText
                android:id="@+id/inputFuncionario_nome"
                style="@style/inputs"
                android:inputType="text" />

            <TextView
                style="@style/labelForms"
                android:text="@string/txtEmail" />

            <EditText
                android:id="@+id/inputFuncionario_email"
                style="@style/inputs"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/labelForms"
                android:text="@string/txtCPF" />

            <EditText
                android:id="@+id/inputFuncionario_cpf"
                style="@style/inputs"
                android:inputType="text" />

            <TextView
                style="@style/labelForms"
                android:text="@string/txtTelefone" />

            <EditText
                android:id="@+id/inputFuncionario_telefone"
                style="@style/inputs"
                android:inputType="phone" />

            <TextView
                style="@style/labelForms"
                android:text="@string/txtLogradouro" />

            <EditText
                android:id="@+id/inputFuncionario_logradouro"
                style="@style/inputs"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".6"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelForms"
                        android:text="@string/txtCEP" />

                    <EditText
                        android:id="@+id/inputFuncionario_cep"
                        style="@style/inputs"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelForms"
                        android:text="@string/txtNumero" />

                    <EditText
                        android:id="@+id/inputFuncionario_numero"
                        style="@style/inputs"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".6"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelForms"
                        android:text="@string/txtBairro" />

                    <EditText
                        android:id="@+id/inputFuncionario_bairro"
                        style="@style/inputs"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelForms"
                        android:text="@string/txtComplemento" />

                    <EditText
                        android:id="@+id/inputFuncionario_complemento"
                        style="@style/inputs"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".6"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelForms"
                        android:text="@string/txtCidade" />

                    <EditText
                        android:id="@+id/inputFuncionario_cidade"
                        style="@style/inputs"
                        android:inputType="textEmailAddress" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labelForms"
                        android:text="@string/txtUF" />

                    <EditText
                        android:id="@+id/inputFuncionario_UF"
                        style="@style/inputs"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/labelForms"
                android:text="@string/txtCargo" />

            <EditText
                android:id="@+id/inputFuncionario_cargo"
                style="@style/inputs"
                android:inputType="text" />

            <TextView
                style="@style/labelForms"
                android:text="@string/txtSenha" />

            <EditText
                android:id="@+id/inputFuncionario_senha"
                style="@style/inputs"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnAddImagem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_adicionar_imagem" />

                <TextView
                    style="@style/labelForms"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/txtPerfil" />

                <ImageView
                    android:id="@+id/imagemFuncionario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/editbox_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCadastrarFuncionario"
                    style="@style/btnAdicionar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:text="@string/txtCadastrar"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/FuncionarioCadastro_menu"
        layout="@layout/menu_inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>