<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".Activities.FuncionarioListarActivity">

    <include
        android:id="@+id/FuncionarioListar_header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/FuncionarioListar_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FuncionarioListar_header"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:text="@string/txtFuncionario"
            style="@style/txtTituloActivity"
            android:layout_marginBottom="20dp"/>

        <!-- barra de busca -->
        <SearchView
            android:id="@+id/search_Funcionario"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_preto"
            android:padding="0dp"
            android:layout_marginBottom="20dp"
            style="@style/inputs"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/txtCodigo"
                        android:layout_weight=".01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/listaCabecalho"/>

                    <TextView
                        android:text="@string/txtNome"
                        android:layout_weight=".5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/listaCabecalho"/>

                    <TextView
                        android:text="@string/txtCargo"
                        android:layout_weight=".3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/listaCabecalho"/>

                    <ImageButton
                        android:id="@+id/btnFuncionarioEditar"
                        style="@style/listaIcons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_editar"
                        android:visibility="invisible" />
                </LinearLayout>

                <ListView
                    android:id="@+id/listviewFuncionarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include
        android:id="@+id/FuncionarioListar_menu"
        layout="@layout/menu_inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>